--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "socket-chat",
 	"version": "0.0.1",
-	"description": "my first socket.io app",
+	"description": "chat app with socket.io",
 	"dependencies": {
 		"express": "^4.15.2",
 		"socket.io": "^2.2.0"
